# bolashaq_production_sync

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  dump.sh
bp_sync/: README.md  pyproject.toml
bp_sync/src/: alembic.ini  cli.py  main.py
bp_sync/src/admin/: admin_models.py  authenticate.py  base_admin.py  communication_admin_model.py  company_admin_model.py  contact_admin_model.py  deal_admin_model.py  lead_admin_model.py  mixins.py  product_admin_model.py  product_images_admin_model.py  supplier_admin_model.py  user_admin_model.py
bp_sync/src/api/v1/: auth.py  deps.py  health_checker.py  test.py
bp_sync/src/core/: logger.py  settings.py
bp_sync/src/core/exceptions/: repo_exceptions.py  supplier_exceptions.py
bp_sync/src/db/: postgres.py
bp_sync/src/middleware/: auth_middleware.py
bp_sync/src/migration/: env.py  helpers.py
bp_sync/src/migration/versions/: 2025_11_23_0246-f3a390000133_initial.py  2025_11_27_1707-0ddec39cb56b_add_new_statuses_for_deal.py  2025_11_30_2148-551a8ab5eec5_add_product_model.py  2025_12_03_0110-70c480de4d42_add_product_list_in_deal.py  2025_12_11_1521-85f1e1766d83_add_contract_statuses_for_deal.py  2026_02_11_2242-5a753fdf8129_add_supplier_product.py  2026_02_11_2313-1fef2a92e5ab_upd_supplier_product.py  2026_02_12_1305-b04204b3843e_upd_supplier_product_external_id.py  2026_02_12_2052-c6c53cbb80ff_add_source_key_field_to_supplier_.py  2026_02_12_2057-818cfbcec359_add_source_key_field_to_supplier_.py  2026_02_12_2105-dab491f8a066_add_source_key_field_to_importconfig_.py  2026_02_17_1240-af460b0c1d3b_add_sync_with_crm_in_importcolumnmapping.py  2026_02_18_2220-9d1471a3222d_add_productsection.py  2026_03_02_1519-481bb8c04f0b_add_needs_review_to_supplier.py  2026_03_03_0101-06d73f15013f_add_failure_reason_to_lead.py  2026_03_06_1742-dfc795e68dd3_add_not_wholesale_to_lead_failure_enum.py  (+17 more)
bp_sync/src/models/: bases.py  communications.py  company_models.py  contact_models.py  deal_models.py  deal_stage_models.py  department_models.py  lead_models.py  product_images_models.py  product_models.py  productsection_models.py  suppier_models.py  supplier_models.py  timeline_comment_models.py  user_models.py
bp_sync/src/schemas/: base_schemas.py  bitrix_validators.py  change_log_schemas.py  company_schemas.py  contact_schemas.py  deal_schemas.py  department_schemas.py  enums.py  fields.py  helpers.py  lead_schemas.py  open_ai_schemas.py  product_image_schemas.py  product_schemas.py  productsection_schemas.py  supplier_schemas.py  timeline_comment_schemas.py  user_auth_schemas.py  user_schemas.py  webhook_schemas.py
bp_sync/src/services/: decorators.py  dependencies_bitrix.py  dependencies_bitrix_entity.py  dependencies_entity.py  dependencies_repo.py  exceptions.py  file_download_service.py  open_ai_services.py  rabbitmq_client.py
bp_sync/src/templates/: edit.html  index.html  list.html  login.html  register.html  test.html
quick_sign_bot/: Dockerfile  pyproject.toml
quick_sign_bot/src/: main.py
quick_sign_bot/src/core/: logger.py  settings.py
quick_sign_bot/src/db/: redis.py
quick_sign_bot/src/services/: api_server.py  document_approval_bot.py  utils.py
(+119 files in other folders)
